--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "configFile": "jspm.conf.js",
     "dependencies": {
       "angular2": "npm:angular2@^2.0.0-beta.16",
-      "reflect-metadata": "npm:reflect-metadata@^0.1.3"
+      "css": "github:systemjs/plugin-css@^0.1.21",
+      "reflect-metadata": "npm:reflect-metadata@^0.1.3",
+      "text": "github:systemjs/plugin-text@^0.0.7"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
